--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -120,12 +120,12 @@
 \mainmatter
 \include{archivosTex/introduccion}
 \include{archivosTex/preliminares}
-\include{archivosTex/adv-clasificadores}
-\include{archivosTex/propuesta}
-\include{archivosTex/analisisydiseno}
-\include{archivosTex/desarrollo}
-\include{archivosTex/conclusiones2}
-\include{archivosTex/anexos}
+%\include{archivosTex/adv-clasificadores}
+%\include{archivosTex/propuesta}
+%\include{archivosTex/analisisydiseno}
+%\include{archivosTex/desarrollo}
+%\include{archivosTex/conclusiones2}
+%\include{archivosTex/anexos}
 \backmatter
 \addcontentsline{toc}{chapter}{Bibliograf\'ia}
 \bibliographystyle{abbrv} %{plain}
