cambio titulo ingles

--- a/TT-2016-B045/archivosTex/preliminares.tex
+++ b/TT-2016-B045/archivosTex/preliminares.tex
@@ -286,7 +286,7 @@ como salida se obtiene una cadena binaria de 160 bits. Al igual que el
 MD5, se procesa en bloques de 512 bits~\cite{modes}.
 \pagebreak
 
-\section{Cloud Computing (Cómputo Nube)}
+\section{Cómputo Nube}
 El cómputo nube definido así por el NIST (National Institute of Standards and Technology), es un modelo para permitir un acceso a la red ubicuo, es decir, que se encuentra presente en todas partes al mismo tiempo y conveniente a un conjunto de recursos informáticos configurables (por ejemplo, redes, servidores, almacenamiento, aplicaciones y servicios) que se puede aprovisionar y liberar rápidamente con un esfuerzo mínimo de gestión o una interacción entre el proveedor de servicios.
 Este modelo de cómputo nube se compone de 5 características esenciales, 3 modelos de servicio y 4  modelos de despliegue. [  ] \\ \\  
 
